--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 <body>
-    <button onclick="window.location.reload()">Run Program</button>
+    <button onclick="window.location.reload()">Run Carpe Diem Task Manager</button>
     <div id="terminal"></div>
 
     <script>
