changed run button name to 'Run Task Manager' to make it clearer to the user and updated requirements.txt

--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,5 @@
 <body>
-    <button onclick="window.location.reload()">Run Carpe Diem Task Manager</button>
+    <button onclick="window.location.reload()">Run Task Manager</button>
     <div id="terminal"></div>
 
     <script>
